sumo/tests/sumo/pedestrian_model/striping/errors/disconnected_route/fcd.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 10/30/15 22:46:49 by SUMO Version dev-SVN-r19224
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <fcd-output value="fcd.xml"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <processing>
        <pedestrian.model value="striping"/>
        <pedestrian.striping.dawdling value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<fcd-export xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/fcd_file.xsd">
    <timestep time="0.00">
        <person id="p0" x="108.93" y="78.65" angle="0.00" speed="0.00" pos="78.65" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="1.00">
        <person id="p0" x="108.93" y="80.04" angle="0.00" speed="1.39" pos="80.04" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="2.00">
        <person id="p0" x="108.93" y="81.43" angle="0.00" speed="1.39" pos="81.43" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="3.00">
        <person id="p0" x="108.93" y="82.82" angle="0.00" speed="1.39" pos="82.82" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="4.00">
        <person id="p0" x="108.93" y="84.21" angle="0.00" speed="1.39" pos="84.21" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="5.00">
        <person id="p0" x="108.93" y="85.59" angle="0.00" speed="1.39" pos="85.59" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="6.00">
        <person id="p0" x="108.93" y="86.98" angle="0.00" speed="1.39" pos="86.98" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="7.00">
        <person id="p0" x="108.93" y="88.37" angle="0.00" speed="1.39" pos="88.37" edge="SC" slope="0.00"/>
    </timestep>
</fcd-export>
